<resources>
    <string name="app_name">Circle_Application</string>
    <string name="circle">CIRCLE</string>
    <string name="where_every_ride_matters">WHERE EVERY RIDE MATTERS</string>
    <string name="explore_new_ways_to_ntravel_with_circle">Explore new ways to\ntravel with Circle</string>
    <string name="continue_with_phone_number">Continue with Phone Number</string>
    <string name="by_continuing_you_agree_that_you_have_read_and_accept_our_t_amp_cs_nand_privacy_policy"><![CDATA[By continuing, you agree that you have read and accept our T&Cs\nand Privacy Policy.]]></string>
    <string name="i_am">I Am</string>
    <string name="driver">"            Driver"</string>
    <string name="consumer">Consumer</string>
    <string name="next">Next</string>
    <string name="_91">+91</string>
    <string name="your_number">Your number</string>
    <string name="this_number_will_be_used_for_all_ride_related_communication_you_shall_recieve_an_sms_with_code_for_verification">This number will be used for all ride-related communication. You shall recieve an SMS with code for verification.</string>
    <string name="enter_phone_number_for_nverification">Enter Phone number for \nverification</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="verify">Verify</string>
    <string name="support">Support</string>
    <string name="dot">....</string>
    <string name="welcome_to_circle">Welcome to Circle</string>
    <string name="have_a_hassle_free_booking_experience_by_giving_us_the_following_permissions">Have a hassle-free booking experience by giving us the following permissions.</string>
    <string name="dott">.</string>
    <string name="dottt">.</string>
    <string name="location_for_finding_available_rides">Location (for finding available rides)</string>
    <string name="phone_for_account_security_verification">Phone (for account security verification)</string>
    <string name="allow">ALLOW</string>
    <string name="set_up_your_circle_account">Set up your Circle account</string>
    <string name="yourname">Your name helps driver identify you.\nAn email address lets us share trip reciepts.</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="dot6">......</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="profile">Profile</string>
    <string name="profile1"><![CDATA[Profile >]]></string>
    <string name="about">About</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="insurance">Insurance</string>
    <string name="payments">Payments</string>
    <string name="history">History</string>
    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Close Navigation Drawer</string>
    <string name="welcome_to_circle_your_ultimate_companion_for_safe_reliable_and_comfortable_journeys_at_circle_we_understand_that_traveling_in_a_new_city_especially_when_it_comes_to_finding_transportation_that_is_both_affordable_and_trustworthy_that_s_why_we_ve_designed_our_app_to_redefine_your_travel_experience_ensuring_that_every_journey_is_not_only_convenient_but_also_worry_free_n_n_with_circle_you_can_say_goodbye_to_the_hassle_of_haggling_with_auto_rickshaw_drivers_or_worrying_about_the_safety_of_your_commute_our_intuitive_platform_connects_you_with_the_nearest_cab_or_bike_allowing_you_to_track_your_ride_in_real_time_using_gps_technology_whether_you_re_navigating_through_bustling_city_streets_or_exploring_unfamiliar_neighbourhoods_rest_assured_that_circle_has_your_back_every_step_of_the_way_n_n_safety_is_our_top_priority_which_is_why_we_ve_implemented_stringent_measures_to_ensure_that_all_our_drivers_are_thoroughly_vetted_and_trained_from_background_checks_to_vehicle_inspections_we_leave_no_stone_unturned_in_guaranteeing_your_peace_of_mind_additionally_our_in_app_rating_system_allows_you_to_provide_feedback_on_your_journey_empowering_us_to_continually_improve_our_services_and_maintain_the_highest_standards_of_safety_and_quality_n_n_but_that_s_not_all_at_circle_we_believe_in_making_travel_accessible_to_everyone_that_s_why_we_re_committed_to_offering_competitive_rates_that_are_transparent_and_fair_no_more_surprise_charges_or_inflated_prices_with_circle_you_ll_always_know_exactly_what_you_re_paying_for_ensuring_a_stress_free_experience_from_start_to_finish_n_n_as_part_of_our_commitment_to_customer_satisfaction_we_also_offer_a_range_of_exciting_offers_and_rewards_whether_it_s_discounts_on_large_journeys_or_exclusive_benefits_for_frequent_travelers_we_re_always_looking_for_ways_to_reward_our_loyal_customers_and_enhance_their_overall_experience_with_circle_n_n_but_our_journey_doesn_t_stop_here_we_re_constantly_innovating_and_exploring_new_ways_to_improve_our_app_and_make_travel_even_more_convenient_for_you_from_introducing_new_features_to_expanding_our_service_offerings_we_re_dedicated_to_staying_ahead_of_the_curve_and_exceeding_your_expectations_every_step_of_the_way_n_n_so_why_wait_join_the_circle_community_today_and_experience_travel_like_never_before_safe_reliable_and_always_on_your_side_that_s_the_circle_promise_n_n">Welcome to Circle, your ultimate companion for safe, reliable, and comfortable journeys. At Circle, we understand that traveling in a new city , especially when it comes to finding transportation that is both affordable and trustworthy. That\'s why we\'ve designed our app to redefine your travel experience, ensuring that every journey is not only convenient but also worry-free. \n\n With Circle, you can say goodbye to the hassle of haggling with auto-rickshaw drivers or worrying about the safety of your commute. Our intuitive platform connects you with the nearest cab or bike, allowing you to track your ride in real-time using GPS technology. Whether you\'re navigating through bustling city streets or exploring unfamiliar neighbourhoods, rest assured that Circle has your back every step of the way. \n\n Safety is our top priority, which is why we\'ve implemented stringent measures to ensure that all our drivers are thoroughly vetted and trained. From background checks to vehicle inspections, we leave no stone unturned in guaranteeing your peace of mind. Additionally, our in-app rating system allows you to provide feedback on your journey, empowering us to continually improve our services and maintain the highest standards of safety and quality. \n\n But that\'s not all – at Circle, we believe in making travel accessible to everyone. That\'s why we\'re committed to offering competitive rates that are transparent and fair. No more surprise charges or inflated prices – with Circle, you\'ll always know exactly what you\'re paying for, ensuring a stress-free experience from start to finish. \n\n As part of our commitment to customer satisfaction, we also offer a range of exciting offers and rewards. Whether it\'s discounts on large journeys or exclusive benefits for frequent travelers, we\'re always looking for ways to reward our loyal customers and enhance their overall experience with Circle. \n\n But our journey doesn\'t stop here. We\'re constantly innovating and exploring new ways to improve our app and make travel even more convenient for you. From introducing new features to expanding our service offerings, we\'re dedicated to staying ahead of the curve and exceeding your expectations every step of the way. \n\n So why wait? Join the Circle community today and experience travel like never before. Safe, reliable, and always on your side – that\'s the Circle promise.\n\n</string>
    <string name="terms">1. User Agreement: By using “CIRCLE”s , you agree to abide by the terms and conditions outlined in the agreement.\n\n 2. User Account Users must create an account to access “CIRCLE” services. This involves providing accurate and up-to-date information.\n\n 3. User Requirements and Conduct: Don\'t join as driver if you\'re under 18, and with duplicate license .Don\'t let others use your account. Follow the law, don\'t cause trouble, and provide ID if asked.\n\n 4. Text Messaging: By creating an account, you agree to receive SMS messages. You can opt-out anytime.\n\n 5. Promotional Codes: “CIRCLE” may offer promo codes, subject to their terms. They can be disabled if misused.\n\n 6. User Provided Content: You can share content with “CIRCLE”, but they have rights to use it. Don\'t share anything offensive or illegal.\n\n 7. Network Access and Devices: You\'re responsible for internet access and device compatibility. :” CIRCLE” doesn\'t guarantee uninterrupted service.\n\n 8. Data Privacy:” CIRCLE” collects personal information from users for the purpose of providing and improving its services. Users\' privacy rights are outlined in.\n\n 9. Enhanced Experience: We collect your information to improve your experience, track feature usage, and enhance service quality.\n\n 10. App Version and Troubleshooting: Information from the mobile app helps us serve you better, troubleshoot, and sometimes for marketing.\n\n 11. IP Address Usage: IP addresses are used for server diagnostics but don\'t contain personal info.\n\n 12. Prevention and Investigation: Information may be used to prevent violations, investigate fraud, or other matters.\n\n 13. Sharing with Drivers and Users: Your info, like name and location, is shared with drivers and other users for service purposes.\n\n 14. Geo-location Information: Geo-location is used for various purposes including finding drivers, setting pick-up locations, and promotions.\n\n 15. Payment: Users agree to pay for the services they use according to “CIRCLE” pricing policies. This includes fares, tolls, and any additional fees incurred during the ride.\n\n 16. “CIRCLE” charges you for the services or products you receive from their partnered providers. This includes things like rides or deliveries. The total cost will include any applicable taxes as required by law. Sometimes, they might also add an extra charge for pickups from certain locations.\n\n 17. Once you\'ve received the service or product, “CIRCLE” handles the payment to the provider on your behalf. Generally, the charges you see are final unless “CIRCLE” decides to issue a refund for some reason.\n\n “CIRCLE” has the flexibility to change their prices whenever they see fit, especially during busy times when there\'s high demand for their services. This is something to keep in mind as your fare might be higher during peak times.\n\n 18. If you\'re offered any discounts or promotions by “CIRCLE”, they won\'t affect how much you\'re charged for the service.\n\n 19. Cancellation Policy: You can cancel a trip at any time through the “CIRCLE” app, but may be charged a cancellation fee if you cancel after you\'re matched with your driver. Cancellation fees pay drivers for the time and effort they spend getting to your location.\n\n 20. Behavioral Expectations: Users are expected to behave respectfully towards customer and other users during their journey experience. Any inappropriate behavior may result in suspension or termination of the driver account.\n\n 21. Safety: Users are responsible for their own safety during rides. This includes wearing seatbelts and adhering to local traffic laws.\n\n 22. Dispute Resolution: Any disputes between users and Uber are subject to arbitration rather than traditional litigation.\n\n 23. Governing Law: The terms and conditions are governed by the laws of the jurisdiction in which the user resides. These terms are governed by Indian law. Any disputes will first go through mediation under Indian law, and if not resolved within 60 days, will be settled by arbitration under the Arbitration and Conciliation Act, 1996.\n\n</string>
</resources>